--- a/tests/worker/base-scenarios/base-tmt_checks.yaml
+++ b/tests/worker/base-scenarios/base-tmt_checks.yaml
@@ -10,6 +10,7 @@ variable:
   GIT_CLONE_URL: change-me
   GIT_REF: change-me
   PLAN: change-me
+  SCHEDULE_ENTRIES: 1
 
 checks:
   literal-strings:
@@ -20,7 +21,7 @@ checks:
     - "[test-schedule-tmt-connect] cloning repo {{ GIT_CLONE_URL }} (branch not specified, ref {{ GIT_REF }})"
     - "[test-schedule-tmt-connect] tmt exited with code 0"
     - "[test-schedule-tmt-connect] cloning repo"
-    - "[test-schedule-runner] running test schedule of 1 entries"
+    - "[test-schedule-runner] running test schedule of {{ SCHEDULE_ENTRIES }} entries"
     - "[test-schedule-report] Result of testing: {{ RESULT }}"
 
 
