tests: add archiving or report.html
Now that we hide pipeline logs from public, we should be fine
to view the reports for our developers.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,6 +105,15 @@ direnv:
     - /bin/bash -c "${AFTER_SCRIPT}"
     - "[ ${EXIT_CODE} = 0 ]"
 
+# Archive pytest-gluetool artifacts
+.archive_tests:
+  artifacts:
+    expose_as: report
+    paths:
+      - report.html
+      - assets/
+    when: always
+
 ansible-vault:
   extends: .direnv
   stage: test
@@ -130,7 +139,7 @@ pre-commit:
     - when: always
 
 test/dev:
-  extends: .direnv
+  extends: [.direnv, .archive_tests]
   stage: test
   script:
     # TODO: tmt run -e cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME plan --name /terraform/environments/dev
