Add artemis installation via terragrunt
Add Artemis installation with terragrunt with a single modules
and all the configuration stored in terragrunt/artemis/terragrunt.hcl.

Nice and clean.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,6 +65,7 @@ repos:
       - id: terraform_tfsec
       - id: terragrunt_validate
         files: ^terragrunt/environments/
+        exclude: ^terragrunt/environments/.*/artemis/config
       - id: terragrunt_fmt
 
   # Generate guest-setup tests on changes in dev/config/variables_images.yaml
