--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ terragrunt/environments/**/backend.tf
 terragrunt/environments/**/provider.tf
 
 # terragrunt cache
-**/
+**/.terragrunt-cache
 
 # terragrunt debug variables
 terragrunt-debug.tfvars.json
