--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,6 +136,8 @@ pre-commit:
   stage: test
   script:
     - !reference [.direnv, script]
+    # Need to init the modules, or pre-commit terragrunt_validate will fail :(
+    - make dev/init
     - PRE_COMMIT_HOME=$CI_PROJECT_DIR/.cache/pre-commit pre-commit run --all-files
   rules:
     - !reference [.rules, not_default_branch]
