Add development eks cluster via terragrunt
First patch to move to terragrunt based infrastructure.

This creates cluster, and the cluster is a separate module in the dev
environment.

Have the code in a new `terragrunt` directory, we will drop terraform
parts once the migration ready.

Same goes for the Makfile, add new make teragets to create the
development environment, but keep the old one so folks can destroy
their old development environment.

Change the `test/dev` gitlab job to call the new development
environment.

Drop `test/guest-setup` which is broken anyway, we will bring it later.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -146,18 +146,14 @@ test/dev:
   extends: [.direnv, .archive_tests]
   stage: test
   script:
-    # TODO: tmt run -e cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME plan --name /terraform/environments/dev
     - !reference [.direnv, script]
     - !reference [.script_with_cleanup, script]
   variables:
     TF_VAR_cluster_name: testing-farm-gitlab-ci-$CI_JOB_ID
-    SCRIPT_DIR: terraform/environments/dev
-    PYTEST_OPTIONS: -k 'not container'
     SCRIPT: >-
-      make init-dev &&
-      make apply-dev &&
-      make test-worker-public
-    AFTER_SCRIPT: make destroy-dev > /dev/null
+      make dev/init &&
+      make dev/apply
+    AFTER_SCRIPT: make dev/destroy > /dev/null
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
@@ -196,28 +192,6 @@ test/production:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terraform_production]
-
-test/guest-setup:
-  extends: .direnv
-  stage: test
-  script:
-    # TODO: tmt run -e cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME plan --name /terraform/environments/dev
-    - !reference [.direnv, script]
-    - !reference [.script_with_cleanup, script]
-  variables:
-    TF_VAR_cluster_name: testing-farm-gitlab-ci-$CI_JOB_ID
-    SCRIPT_DIR: terraform/environments/dev
-    PYTEST_OPTIONS: -k 'not container'
-    SCRIPT: >-
-      make init-dev &&
-      make apply-dev &&
-      make test-guest-setup
-    AFTER_SCRIPT: make destroy-dev > /dev/null
-  rules:
-    - !reference [.rules, not_default_branch]
-    - !reference [.rules, terraform_dev]
-    - !reference [.rules, not_schedule]
-    - !reference [.rules, guest_setup_tests]
 
 redeploy/staging:
   extends: .direnv
