--- a/terraform/environments/dev/config/variables_images.yaml
+++ b/terraform/environments/dev/config/variables_images.yaml
@@ -1,7 +1,6 @@
 ---
 composes:
 
-  # aws --region us-east-2 ec2 describe-images --filter Name=name,Values=Fedora-Cloud-Base-36* | jq '.Images | .[] | .Name' | sort
   fedora_36:
     compose: Fedora-36
 
@@ -10,23 +9,29 @@ composes:
     aarch64:
       image: Fedora-Cloud-Base-36-1.5.aarch64-hvm-us-east-2-gp2-0
 
-  # aws --region us-east-2 ec2 describe-images --filter Name=name,Values=Fedora-Cloud-Base-37* | jq '.Images | .[] | .Name' | sort
   fedora_37:
     compose: Fedora-37
 
     x86_64:
-      image: Fedora-Cloud-Base-37-20230810.0.x86_64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-37-20230811.0.x86_64-hvm-us-east-2-gp3-0
     aarch64:
-      image: Fedora-Cloud-Base-37-20230810.0.aarch64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-37-20230811.0.aarch64-hvm-us-east-2-gp3-0
 
-  # aws --region us-east-2 ec2 describe-images --filter Name=name,Values=Fedora-Cloud-Base-38* | jq '.Images | .[] | .Name' | sort
   fedora_38:
     compose: Fedora-38
 
     x86_64: &fedora_latest_ref_x86_64
-      image: Fedora-Cloud-Base-38-20230810.0.x86_64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-38-20230811.0.x86_64-hvm-us-east-2-gp3-0
     aarch64: &fedora_latest_ref_aarch64
-      image: Fedora-Cloud-Base-38-20230810.0.aarch64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-38-20230811.0.aarch64-hvm-us-east-2-gp3-0
+
+  fedora_39:
+    compose: Fedora-39
+
+    x86_64:
+      image: Fedora-Cloud-Base-39-20230811.n.0.x86_64-hvm-us-east-2-gp3-0
+    aarch64:
+      image: Fedora-Cloud-Base-39-20230811.n.0.aarch64-hvm-us-east-2-gp3-0
 
   # TFT-1221
   fedora_latest:
@@ -35,14 +40,13 @@ composes:
     x86_64: *fedora_latest_ref_x86_64
     aarch64: *fedora_latest_ref_aarch64
 
-  # aws --region us-east-2 ec2 describe-images --filter Name=name,Values=Fedora-Cloud-Base-Rawhide* | jq '.Images | .[] | .Name' | sort
   fedora_rawhide:
     compose: Fedora-Rawhide
 
     x86_64:
-      image: Fedora-Cloud-Base-Rawhide-20230810.n.0.x86_64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-Rawhide-20230811.n.0.x86_64-hvm-us-east-2-gp3-0
     aarch64:
-      image: Fedora-Cloud-Base-Rawhide-20230810.n.0.aarch64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-Rawhide-20230811.n.0.aarch64-hvm-us-east-2-gp3-0
 
   centos_7:
     compose: CentOS-7
@@ -52,7 +56,6 @@ composes:
     aarch64:
       image: CentOS 7.9.2009 aarch64
 
-  # aws --region us-east-2 ec2 describe-images --filter Name=name,Values="CentOS Stream 8*" | jq '.Images | .[] | .Name' | sort
   centos_stream_8:
     compose: CentOS-Stream-8
 
@@ -61,7 +64,6 @@ composes:
     aarch64:
       image: CentOS Stream 8 aarch64 20230710
 
-  # aws --region us-east-2 ec2 describe-images --filter Name=name,Values="CentOS Stream 8*" | jq '.Images | .[] | .Name' | sort
   centos_stream_9:
     compose: CentOS-Stream-9
 
