--- a/.envrc
+++ b/.envrc
@@ -83,6 +83,12 @@ export TF_VAR_ansible_vault_credentials="credentials.yaml"
 export TF_VAR_ansible_vault_secrets_root="$PROJECT_ROOT/secrets"
 
 #
+# Testing Farm tokens
+#
+export TESTING_FARM_API_TOKEN_PUBLIC="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.public.bot_api_key)"
+export TESTING_FARM_API_TOKEN_REDHAT="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.redhat.bot_api_key)"
+
+#
 # gitlab-ci-linter
 #
 export GITLAB_PRIVATE_TOKEN="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.gitlab.testing_farm_bot.token)"
