Apply 1 suggestion(s) to 1 file(s)

--- a/.envrc
+++ b/.envrc
@@ -86,6 +86,7 @@ export TF_VAR_ansible_vault_secrets_root="$PROJECT_ROOT/secrets"
 # Testing Farm tokens
 #
 export TESTING_FARM_API_TOKEN_PUBLIC="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.public.bot_api_key)"
+# NOTE: this is not used currently, but we plan to use it later
 export TESTING_FARM_API_TOKEN_REDHAT="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.redhat.bot_api_key)"
 
 #
