guest-setup/aws-hostname: fix typo
We compared to int, it is a string.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/aws-hostname.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/aws-hostname.yaml
@@ -30,4 +30,4 @@
     - GUEST is defined
     - GUEST.artemis_id is defined
     - aws_metadata_response is defined
-    - aws_metadata_response.stdout == 200
+    - aws_metadata_response.stdout == "200"
