--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,13 +56,16 @@ repos:
 
   # Terraform linters
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.76.0
+    rev: v1.81.2
     hooks:
       - id: terraform_fmt
         args:
           - --args=-diff
       - id: terraform_tflint
       - id: terraform_tfsec
+      - id: terragrunt_validate
+        files: ^terragrunt/environments/
+      - id: terragrunt_fmt
 
   # Generate guest-setup tests on changes in dev/config/variables_images.yaml
   - repo: local
