Move compose generation to setup
With that:

* call it compose tests, not guest-setup
* rename the template
* rename the Makefile to new naming scheme with `/`

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -72,11 +72,11 @@ repos:
           )$
       - id: terragrunt_fmt
 
-  # Generate guest-setup tests on changes in dev/config/variables_images.yaml
+  # Generate Public Ranch compose tests
   - repo: local
     hooks:
-      - id: generate-guest-setup
-        name: generate-guest-setup
-        entry: make generate-guest-setup
+      - id: generate-public-compose-tests
+        name: generate-public-compose-tests
+        entry: make generate/public/tests/compose
         language: system
         pass_filenames: false
