--- a/tests/worker/public/compose-Fedora-37-x86_64.yaml
+++ b/tests/worker/public/compose-Fedora-37-x86_64.yaml
@@ -12,11 +12,11 @@ extends:
   - base-tmt_checks
 
 marks:
-  - guest-setup
   - public
+  - compose
 
 variables:
-  REQUEST_ID: a785398d-8c0f-4456-a534-f3348f66fb39
+  REQUEST_ID: 0446a4ef-c252-4317-9beb-ae6c8e13c828
   COMPOSE: Fedora-37
   ARCH: x86_64
   RESULT: PASSED
