--- a/tests/worker/public/compose-CentOS-Stream-8-x86_64.yaml
+++ b/tests/worker/public/compose-CentOS-Stream-8-x86_64.yaml
@@ -12,11 +12,11 @@ extends:
   - base-tmt_checks
 
 marks:
-  - guest-setup
   - public
+  - compose
 
 variables:
-  REQUEST_ID: 7b92d396-8859-45a4-816e-0b7c8139a1c3
+  REQUEST_ID: 000a2f42-8183-4bcd-9d81-23108c93a500
   COMPOSE: CentOS-Stream-8
   ARCH: x86_64
   RESULT: PASSED
