--- a/tests/worker/public/compose-CentOS-Stream-9-x86_64.yaml
+++ b/tests/worker/public/compose-CentOS-Stream-9-x86_64.yaml
@@ -12,11 +12,11 @@ extends:
   - base-tmt_checks
 
 marks:
-  - guest-setup
   - public
+  - compose
 
 variables:
-  REQUEST_ID: e6afa8d7-46c5-4678-b6a7-89c9259dd84b
+  REQUEST_ID: 0c30af58-eee8-4029-95a3-26bfc61a0af3
   COMPOSE: CentOS-Stream-9
   ARCH: x86_64
   RESULT: PASSED
