--- a/tests/worker/public/compose-Fedora-Rawhide-x86_64.yaml
+++ b/tests/worker/public/compose-Fedora-Rawhide-x86_64.yaml
@@ -12,11 +12,11 @@ extends:
   - base-tmt_checks
 
 marks:
-  - guest-setup
   - public
+  - compose
 
 variables:
-  REQUEST_ID: c5ea57bc-e828-4e77-9ce5-fcbe207ed588
+  REQUEST_ID: a0adc406-aa1e-47c2-b0e1-80742d0c6cd9
   COMPOSE: Fedora-Rawhide
   ARCH: x86_64
   RESULT: PASSED
