--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -16,7 +16,8 @@
 #
 # The play gracefully skips adding a tag repository which is not reachable.
 #
-# Tag repository is enabled only on Fedora Rawhide and CentOS Stream. See https://pagure.io/fedora-ci/general/issue/376.
+# Tag repository is enabled only on Fedora and CentOS Stream.
+# See https://pagure.io/fedora-ci/general/issue/376 for discussion about the current agreement.
 #
 
 - name: Check for rawhide
@@ -100,8 +101,7 @@
   # block: end
   #
   when:
-    - (ansible_distribution == "Fedora" and check_rawhide.rc == 0)
-      or IMAGE_NAME|lower|regex_search('centos.stream')
+    - ansible_distribution == "Fedora" or IMAGE_NAME|lower|regex_search('centos.stream')
 
 #
 # Be verbose about the fact we skipped this play
