gitlab-ci: do not run this job after merge and on schedule
It is not needed, it is run for MRs.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,9 @@ direnv:
     - direnv allow
     - eval "$(direnv export bash)"
     - make generate/staging/citool-config
+  rules:
+    - !reference [.rules, not_default_branch]
+    - !reference [.rules, not_schedule]
 
 .direnv:
   before_script:
